tests/neg/i14401b.check
-- [E039] Reference Error: tests/neg/i14401b.scala:5:17 ----------------------------------------------------------------
5 |    def f: Int = x; // error
  |                 ^
  |                 forward reference to x extends over the definition of x (on line 6)
  |---------------------------------------------------------------------------------------------------------------------
  | Explanation (enabled by `-explain`)
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  | x is used before you define it, and the definition of x
  | appears between that use and the definition of x.
  |
  | Forward references are allowed only if there are no value definitions between
  | the reference and the definition that is referred to.
  | Specifically, any statement between the reference and the definition
  | cannot be a variable definition, and if it's a value definition, it must be lazy.
  |
  | Define x before it is used,
  | or move the definition of x so it does not appear between
  | the declaration of x and its use,
  | or define x as lazy.
   ---------------------------------------------------------------------------------------------------------------------
